<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/partial_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:gravity="top"
                android:importantForAutofill="no"
                android:inputType="textLongMessage|textMultiLine"
                android:hint="@string/description_hint"
                android:maxLines="4"
                android:textSize="14sp"
                tools:ignore="LabelFor"
                tools:text="This is sample description text." />

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="top"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/content_language_spinner"
                android:textColor="?colorOnSurface"
                tools:ignore="RelativeOverlap" />

            <Spinner
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/private2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/privacy_switch" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comments_switch" />

    </LinearLayout>

</LinearLayout>
