<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_sheet"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:background="@drawable/bg_bottom_sheet"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <include layout="@layout/partial_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/login_description"
            app:layout_constraintEnd_toStartOf="@id/close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="?attr/colorBackgroundFloating"
            android:padding="10dp"
            android:text="@string/facebook_label"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:icon="@drawable/ic_facebook"
            app:iconGravity="textStart"
            app:iconTint="@null"
            style="?materialButtonOutlinedStyle" />

        <Button
            android:id="@+id/google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="?attr/colorBackgroundFloating"
            android:padding="10dp"
            android:text="@string/google_label"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:icon="@drawable/ic_google"
            app:iconGravity="textStart"
            app:iconTint="@null"
            style="?materialButtonOutlinedStyle" />

        <Button
            android:id="@+id/otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="?attr/colorBackgroundFloating"
            android:padding="10dp"
            android:text="@string/otp_label"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:icon="@drawable/ic_key"
            app:iconGravity="textStart"
            app:iconTint="@null"
            style="?materialButtonOutlinedStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
